--- a/login/loginStyle.css
+++ b/login/loginStyle.css
@@ -13,25 +13,42 @@ body {
     background-color: #0044FF;
 }
 
+/* ------------------------------------------------------------------------------------------------ */
+
 #loginForm {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     background-color: white;
-    height: 65%;
+    height: 75%;
     padding: 50px;
+    border-radius: 40px;
 }
 
 #title {
-    font-family: 'manrope';
     font-weight: 500;
     font-size: 3rem;
 }
 
 #button {
-    
+    margin-top: 20px;
+    border-radius: 50px;
+    height: 75px;
+    width: 30vw;
+    background-color: #00227E;
+    color: white;
+    border: none;
+    font-size: 2rem;
 }
+#button:hover {
+    background-color: white;
+    color: #00227E;
+    border: 1px solid #00227E;
+    transition: 0.2s;
+}
+
+/* ------------------------------------------------------------------------------------------------ */
 
 .containerInput {
     display: flex;
@@ -45,4 +62,19 @@ body {
 .input {
     width: 30vw;
     height: 50px;
+    border-radius: 20px;
+    border: 1px solid #00227E;
+    background-color: #cedbff;
+    color: #00227E;
+    font-size: 25px;
+    padding-left: 12.5px;
+}
+.input:focus {
+    outline: none;
+}
+/* ------------------------------------------------------------------------------------------------ */
+
+.font-marope-blue {
+    font-family: 'manrope';
+    color: #00227E;
 }
