--- a/assets/dashboard_style.css
+++ b/assets/dashboard_style.css
@@ -103,13 +103,28 @@ body {
     gap: 10px;
 }
 
+#containerCadastro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 7vh;
+    gap: 20px;
+}
+
+#sucesso {
+    color: #050050;
+    background-color: #37f2ff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgb(131, 131, 131);
+}
+
 #cadastrar {
     text-decoration: none;
     color: white;
     background-color: #00227E;
     padding: 10px;
     border-radius: 10px;
-    margin-right: 15px;
     box-shadow: 2px 2px 10px rgb(131, 131, 131);
 }
 #cadastrar:hover {
