--- a/assets/dashboard_style.css
+++ b/assets/dashboard_style.css
@@ -186,6 +186,11 @@ body {
     height: 7.5vh;
     font-size: 3vh;
 }
+
+.td {   
+    height: 7.5vh;
+}
+
 #tableBody>tr:hover {
     background-color: #87e5ff;
 }
@@ -210,7 +215,7 @@ td {
     background-color: transparent;
     border: none;
     width: 100%;
-    height: 100%;
+    height: 7.5vh;
     padding: 0px;
     aspect-ratio: 1/1;
 }
